--- a/style.css
+++ b/style.css
@@ -1,11 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Comfortaa:wght@300..700&family=Danfo&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Tiny5&display=swap');
 
 * {
+    background-color: black;
+    color: white;
+}
+
+p, h1, button, a, footer {
     font-family: "Prompt", serif;
     font-weight: 400;
     font-style: normal;
-    background-color: black;
-    color: white;
 }
 
 body {
@@ -62,3 +65,6 @@ a:active {
     color: yellow;
 }
 
+#formula, mo, mi {
+    font-size: xx-large;
+}
