--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     color: white;
 }
 
-p, h1, button, a, footer {
+p, h1, button, a, footer, .form-container {
     font-family: "Prompt", serif;
     font-weight: 400;
     font-style: normal;
